--- a/config.org
+++ b/config.org
@@ -352,11 +352,14 @@ Other functions
     (setq-default org-display-custom-times t)
     (setq org-time-stamp-custom-formats '("<%a %d.%m.%Y>" . "<%a %d.%m.%Y %H:%M>"))
     (setq org-agenda-window-setup 'only-window)
+
+;; Used for bachelor thesis:
 (setq org-latex-pdf-process
       '("pdflatex -interaction nonstopmode -output-directory %o %f"
         "biber %b"
         "pdflatex -interaction nonstopmode -output-directory %o %f"
         "pdflatex -interaction nonstopmode -output-directory %o %f"))
+
 ;; Allows source code execution with C-C C-c
 (org-babel-do-load-languages
  'org-babel-load-languages
