--- a/config.org
+++ b/config.org
@@ -748,6 +748,7 @@ Display horizontal lines instead of ugly characters
       (setq company-idle-delay 0.2)
       (add-to-list 'company-backends 'company-tern)
       (add-to-list 'company-backends 'company-files)
+      (add-to-list 'company-backends 'company-dabbrev)
       (add-hook 'company-mode-hook 'company-quickhelp-mode)
       (setq company-dabbrev-downcase nil)
       (define-key evil-insert-state-map (kbd "C-/") 'dabbrev-expand)
