--- a/config.org
+++ b/config.org
@@ -960,9 +960,9 @@ Uses =C-j= to expand by default
 *** Zeal
 Requires =yay zeal=
 #+BEGIN_SRC emacs-lisp
-(use-package zeal-at-point
-  :ensure t
-  )
+;; (use-package zeal-at-point
+  ;; :ensure t
+  ;; )
 #+END_SRC
 
 *** Parinfer
@@ -1305,7 +1305,7 @@ Most likely: OmniSharp for Linux, .Net Core Debugger, -> msbuild-stable (<--!!!)
  "as" '(ispell-word :which-key "spell check")
  "ao" '(occur :which-key "occur") ;; example usage function\|var
  "ad" 'dired
- "az" '(zeal-at-point-search :which-key "Zeal Docs") ;; example usage function\|var
+ ;; "az" '(zeal-at-point-search :which-key "Zeal Docs") ;; example usage function\|var
 
  ;; Buffer
  "b" '(:ignore t :which-key "Buffer")
