--- a/config.org
+++ b/config.org
@@ -119,8 +119,50 @@
 #+END_SRC
 ** Theme
 #+BEGIN_SRC emacs-lisp
-(use-package base16-theme :ensure t)
- (load-theme 'base16-onedark)
+;; (load-theme 'moe-light)
+
+;; (use-package base16-theme :ensure t)
+;; (load-theme 'base16-onedark)
+;; (use-package moe-theme :ensure t)
+(setq dark-theme 'doom-one)
+(setq light-theme 'doom-solarized-light)
+(setq current-theme dark-theme)
+
+
+(defun day ()
+  "Loads a light theme"
+  (interactive)
+  (disable-theme current-theme)
+  (load-theme light-theme t)
+  (setq current-theme light-theme))
+
+(defun night ()
+  "Loads a dark theme"
+  (interactive)
+  (disable-theme current-theme)
+  (load-theme dark-theme t)
+  (setq current-theme dark-theme))
+
+(use-package doom-themes
+  :ensure t
+  :config
+  ;; Global settings (defaults)
+  (setq doom-themes-enable-bold nil    ; if nil, bold is universally disabled
+        doom-themes-enable-italic t) ; if nil, italics is universally disabled
+(load-theme current-theme t)
+
+  ;; Enable flashing mode-line on errors
+  ;; (doom-themes-visual-bell-config)
+  
+  ;; Enable custom neotree theme (all-the-icons must be installed!)
+  ;; (doom-themes-neotree-config)
+  ;; or for treemacs users
+  ;; (setq doom-themes-treemacs-theme "doom-colors") ; use the colorful treemacs theme
+  ;; (doom-themes-treemacs-config)
+  
+  ;; Corrects (and improves) org-mode's native fontification.
+  (doom-themes-org-config))
+
 #+END_SRC
 Always unify these:
 #+begin_src emacs-lisp
